[package]
name = "null-webhook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.clippy]
# teach me
pedantic = { level = "warn", priority = -1}
# except this confusing pattern
bool_to_int_with_if = { level = "allow", priority = 1}

# no unwrap
unwrap_used = "deny"
# no panic
panic = "deny"

[lints.rust]
# docs!
missing_docs = "deny"
# no unsafe
unsafe_code = "forbid"

[lints.rustdoc]
# docs!
broken_intra_doc_links = "deny"

[dependencies]
clap = { version = "4.4.18", features = ["derive", "cargo", "env"] }
ctrlc = "3.4.2"
eyre = "0.6.12"
sd-notify = "0.4.3"
serde = { version = "1.0.214", features = ["derive"] }
tiny_http = "0.12.0"

[dev-dependencies]
insta = { version = "1.41.1", features = ["filters"] }
minreq = "2.11.0"
nix = { version = "0.29", features = ["signal"] }
